# fastapi-new

./: .gitignore  pyproject.toml
tests/: test_new.py
